fixed Snipcart mobile z-index order AND added support for English

--- a/src/components/Navigation/main.scss
+++ b/src/components/Navigation/main.scss
@@ -336,7 +336,7 @@
   }
 
   &__checkbox:checked ~ div .hamburger:nth-last-child(2) {
-    transform: rotate(45deg) translate(2px, -6px);
+    transform: rotate(45deg) translate(2px, -7px);
   }
 
   &__checkbox:checked ~ ul {
